@@ -5,6 +5,7 @@ munin (work)
     Stransky).
   * Plugin: linux/apt* has been forced to LANG=C, to get predictable output.
   * Plugin: Removed hardcoded host_name in linux/cps_.
+  * Plugin: Added plugin linux/users, created by Michael Kaiser.
 
 munin (1.1.8)
 
